force-app/main/default/objects/AspenConfig__mdt/AspenConfig__mdt.object-meta.xml
<CustomObject>
    <label>Aspen Config</label>
    <pluralLabel>Aspen Configs</pluralLabel>
</CustomObject>