force-app/main/default/objects/AspenConfig__mdt/fields/ASN_EmailId__c.field-meta.xml
<CustomField>
    <fullName>ASN_EmailId__c</fullName>
    <label>ASN Notification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>