force-app/main/default/objects/AspenConfig__mdt/fields/EmailId__c.field-meta.xml
<CustomField>
    <fullName>EmailId__c</fullName>
    <inlineHelpText>Incase of multiple email address enter comma-separated values</inlineHelpText>
    <label>CM Notification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>