force-app/main/default/objects/AspenConfig__mdt/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>