force-app/main/default/objects/AspenConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As of now only used to activate &amp; Deactivate CM</description>
    <inlineHelpText>As of now only used to activate &amp; Deactivate CM</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>