force-app/main/default/objects/AspenConfig__mdt/fields/IsDefaultCMForHW__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultCMForHW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to make a CM default in case, where 2 CM have equal chance to get a deal, this will be preferred one to get deal.</description>
    <inlineHelpText>Used to make a CM default in case, where 2 CM have equal chance to get a deal, this will be preferred one to get deal.</inlineHelpText>
    <label>Is Default CM for HW</label>
    <type>Checkbox</type>
</CustomField>