force-app/main/default/objects/AspenConfig__mdt/fields/IsDefaultCMForSpares__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultCMForSpares__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to make a CM default in case, where Spares are found in a deal.</description>
    <inlineHelpText>Used to make a CM default in case, where Spares are found in a deal.</inlineHelpText>
    <label>Is Default CM for Spares</label>
    <type>Checkbox</type>
</CustomField>