force-app/main/default/objects/AspenConfig__mdt/fields/PreferenceOrder__c.field-meta.xml
<CustomField>
    <fullName>PreferenceOrder__c</fullName>
    <description>Preference for when 2 or more CM have equal Chance of getting winning a deal,
one with lower value will win the deal.</description>
    <inlineHelpText>Lower the value, higher the Preference</inlineHelpText>
    <label>Preference Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>