force-app/main/default/objects/AspenConfig__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Contract Manufacturer</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Distributor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>