force-app/main/default/objects/AspenConfig__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>Value shouldn&apos;t be blank</inlineHelpText>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>