force-app/main/default/objects/AspenConfig__mdt/validationRules/NoDistributorUseCMField.validationRule-meta.xml
<ValidationRule>
    <fullName>NoDistributorUseCMField</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &apos;D&apos;) &amp;&amp;   IsDefaultCMForHW__c &amp;&amp;  IsDefaultCMForSpares__c</errorConditionFormula>
    <errorMessage>Distributor Can&apos;t be a Default CM</errorMessage>
</ValidationRule>